# degressly-core

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile
.github/workflows/: ci.yml
config/: default.yaml  production.yaml
rust/degressly-core/: Dockerfile
rust/degressly-core/config/: development.yaml
rust/degressly-core/src/: main.rs
rust/degressly-core/src/kafka/: consumer.rs  producer.rs  replay.rs
rust/degressly-core/src/proxy/: tests.rs
src/: main.rs
src/config/: mod.rs
src/kafka/: config.rs  consumer.rs  mod.rs  tests.rs
src/main/java/com/degressly/proxy/core/adapter/: KafkaToHttpServletRequestAdapter.java
src/main/java/com/degressly/proxy/core/dto/: DownstreamResult.java  GeneratedHttpServletRequest.java  Observation.java
src/main/java/com/degressly/proxy/core/http/: GeneratedHttpServletRequest.java  HttpClient.java
src/main/java/com/degressly/proxy/core/service/impl/: DefaultReplayHandlerImpl.java  HttpProxyMulticastServiceImpl.java  LoggerObservationPublisherServiceImpl.java
src/main/resources/: application.properties
src/models/: mod.rs
src/proxy/: handler.rs  mod.rs  service.rs
test/: mock_servers.py  test-application.properties  test_wait_times.sh
