[package]
name = "degressly-core-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
rdkafka = { version = "0.36", features = ["cmake-build"] }
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = { version = "0.14", features = ["yaml"] }
env_logger = "0.11"
log = "0.4"
futures = "0.3"
async-trait = "0.1"
reqwest = { version = "0.11", features = ["json"] }
thiserror = "1.0"
anyhow = "1.0"
mockall = "0.12"
